# do_cybersentinel

./: CODEBASE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  alerts.json  start-frontend.sh  start.sh
.next/: trace
src/: detector.rs  logger.rs  main.rs  monitor.rs  state.rs  ui.rs
src/Client/: .eslintignore  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
src/Client/app/: layout.tsx  page.tsx
src/Client/app/api/alerts/: route.ts
src/Client/app/api/scan/: route.ts
src/Client/components/: AlertFeed.tsx  PacketChart.tsx  StatsGrid.tsx  TopIpsTable.tsx
src/Client/components/ui/: toast.tsx
